# XRADLibrariesBuild

./: CMakeLists.txt  XRADDicomTest-2019.sln  XRADDicomTest.sln  XRADLibrariesBuild-2019.sln  XRADLibrariesBuild.sln  XRADLibrariesTest-2019.sln  XRADLibrariesTest.sln
XRADBasicTest/: CMakeLists.txt  XRADBasicTest-2019.vcxproj  XRADBasicTest-2019.vcxproj.filters  XRADBasicTest.cpp  XRADBasicTest.vcxproj  pre.h
XRADConsoleTest/: CMakeLists.txt  XRADConsoleTest-2019.vcxproj  XRADConsoleTest-2019.vcxproj.filters  XRADConsoleTest.cpp  XRADConsoleTest.vcxproj
XRADDicomTest/: CMakeLists.txt  GenerateFigures.cpp  GenerateFigures.h  RadonTest.cpp  RadonTest.h  Tests.cpp  Tests.h  XRADDicomTest-2019.vcxproj  XRADDicomTest-2019.vcxproj.filters  XRADDicomTest.cpp  XRADDicomTest.vcxproj  XRADDicomTest.vcxproj.filters  pre.cpp  pre.h
XRADImmediateTest/: CMakeLists.txt  QtStringConverters_Test.h  SharpeningTest.cpp  SharpeningTest.h  TestArrays.cpp  TestArrays.h  TestDynamicDialog.cpp  TestDynamicDialog.h  TestFFT.cpp  TestFFT.h  TestFFT_asm.asm  TestFileOperations.cpp  TestFileOperations.h  TestFunctions.cpp  TestFunctions.h  TestFunctionsArchive.cpp  TestFunctionsArchive.h  TestFunctionsArchiveUnused.cpp  TestGUIFunctions.cpp  TestGUIFunctions.h  TestHandy.cpp  TestHandy.h  TestJson.cpp  TestJson.h  TestMath.cpp  TestMath.h  TestMisc.cpp  TestMisc.h  TestMoveSemantics.cpp  TestMoveSemantics.h  TestPerformanceCounter.cpp  TestPerformanceCounter.h  TestProgress.cpp  TestProgress.h  TestTextHandling.cpp  TestTextHandling.h  TestThreads.cpp  TestThreads.h  TrackedObject.cpp  TrackedObject.h  (+7 more)
XRADPerformanceTest/: CMakeLists.txt  PerformanceTests.cpp  PerformanceTests.h  XRADPerformanceTest-2019.vcxproj  XRADPerformanceTest.cpp  XRADPerformanceTest.vcxproj  XRADPerformanceTest.vcxproj.filters
