cmake_minimum_required (VERSION 3.8)

set(Project "XRADLibrariesBuild")
project(${Project} LANGUAGES CXX)

option(Build_XRAD "Build XRAD libraries" ON)
option(Build_XRADBasicTest "Build XRADBasicTest" ON)
option(Build_XRADConsoleTest "Build XRADConsoleTest" ON)
option(Build_XRADPerformanceTest "Build XRADPerformanceTest" ON)
option(Build_XRADImmediateTest "Build XRADImmediateTest" ON)
option(Build_XRADDicomTest "Build XRADDicomTest" ON)

if(Build_XRAD)
	set(XRAD_Root $ENV{XRADRoot} CACHE PATH "XRAD library sources directory.")
	if("${XRAD_Root}" STREQUAL "")
		message(FATAL_ERROR "Please, specify XRAD library sources directory (XRAD_Root).")
	endif()

	include("${XRAD_Root}/CMake/Project.cmake")
endif()
if(Build_XRADBasicTest)
	add_subdirectory("XRADBasicTest")
endif()
if(Build_XRADConsoleTest)
	add_subdirectory("XRADConsoleTest")
endif()
if(Build_XRADPerformanceTest)
	add_subdirectory("XRADPerformanceTest")
endif()
if(Build_XRADImmediateTest)
	add_subdirectory("XRADImmediateTest")
endif()
if(Build_XRADDicomTest)
	add_subdirectory("XRADDicomTest")
endif()

if(Build_XRAD)
	xrad_add_xrad_project()
endif()
